# protocol-sim-engine

./: .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  RELEASE_NOTES_v0.4.0.md  RELEASE_NOTES_v0.5.0.md  docker-compose.example.yml  docker-entrypoint.sh  pyproject.toml  run_all_tests.sh
config/: default_config.yml  test_all_protocols.yml
docs/: IMPLEMENTATION_SUMMARY.md  INDEX.md
docs/plans/: OPCUA_IMPLEMENTATION_PLAN.md
docs/protocols/ethernetip/: README.md
docs/protocols/modbus/: README.md
docs/protocols/mqtt/: README.md
docs/protocols/opcua/: README.md
examples/configs/: README.md  full_factory.yml  large_factory.yml  simple_factory.yml
examples/modbus/: quick_start.py
examples/monitoring/: monitor_devices.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Dashboard.tsx  DataMonitor.tsx  DeviceList.tsx  StatusCard.tsx
frontend/src/hooks/: usePolling.ts
frontend/src/types/: index.ts
src/: __init__.py  config_parser.py  main.py  orchestrator.py  port_manager.py
src/data_patterns/: __init__.py  industrial_patterns.py
src/protocols/: __init__.py
src/protocols/industrial/: __init__.py
src/utils/: __init__.py  logging_config.py
tests/: __init__.py
tests/integration/: test_docker_connectivity.py
tests/smoke/: test_docker_deployment.py
tests/unit/: test_ethernetip_protocol.py  test_modbus_protocol.py  test_mqtt_protocol.py  test_opcua_protocol.py
tools/: README.md  validate_data.py
(+14 files in other folders)
