[project]
name = "industrial-facility-simulator"
version = "0.1.0"
description = "Open Source Industrial Protocol & Device Simulation Platform"
authors = [
    {name = "WellSky",email = "wellsky@example.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "pymodbus (>=3.11.4,<4.0.0)",
    "numpy (>=2.4.0,<3.0.0)",
    "asyncio-mqtt (>=0.16.2,<0.17.0)",
    "structlog (>=25.5.0,<26.0.0)",
    "pydantic (>=2.12.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]
